--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Livro_Android_Kotlin_PauloSalvatore</string>
+
+    <string name="creature_number"># %1$d</string>
+    <string name="creature_level">Level %1$d</string>
+    <string name="needs">Needs</string>
+    <string name="actions">Actions</string>
+    <string name="creature_is_hungry">Samambata está com fome!</string>
+    <string name="creature_can_train">Treine para evoluir</string>
+    <string name="creature_experience">%1$d/%2$dxp</string>
+    <string name="percentage">%1$d%%</string>
 </resources>
