feat(creature-view): create `status_preview_component` and add `saira` font

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="creature_number"># %1$d</string>
     <string name="creature_level">Level %1$d</string>
+    <string name="creature_status_preview_name">Status for %1$s</string>
     <string name="needs">Needs</string>
     <string name="actions">Actions</string>
     <string name="creature_is_hungry">Samambata está com fome!</string>
