feat(creature-view): implement creature's image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
 
     <string name="creature_experience">%1$d/%2$dxp</string>
     <string name="percentage">%1$d%%</string>
+
+    <string name="creatures_image">%1$s\'s Image</string>
 </resources>
