--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="needs">Needs</string>
     <string name="actions">Actions</string>
 
-    <string name="creature_can_feed">%1$s está com fome!</string>
-    <string name="creature_can_train">Treine para evoluir</string>
-    <string name="creature_can_play">Brinque com %1$s!</string>
+    <string name="creature_can_feed">%1$s is hungry!</string>
+    <string name="creature_can_train">Train to evolve</string>
+    <string name="creature_can_play">Play with %1$s!</string>
 
     <string name="creature_experience">%1$d/%2$dxp</string>
     <string name="percentage">%1$d%%</string>
