feat(creature-view): implement creature need row

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
 
     <string name="needs">Needs</string>
     <string name="actions">Actions</string>
+
+    <string name="hungry">Hungry</string>
+    <string name="strength">Strength</string>
+    <string name="humor">Humor</string>
 </resources>
