feat(creature-view): add button to evolve creature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="hungry">Hungry</string>
     <string name="strength">Strength</string>
     <string name="humor">Humor</string>
+    <string name="evolve">Evolve!!</string>
 </resources>
