--- a/step02-navigation/src/main/res/values/strings.xml
+++ b/step02-navigation/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">step02-navigation</string>
+    <string name="app_name">Livro_Android_Kotlin_PauloSalvatore</string>
 </resources>
