chore: update app names

--- a/project-complete/src/main/res/values/strings.xml
+++ b/project-complete/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Livro_Android_Kotlin_PauloSalvatore</string>
+    <string name="app_name">DevMon Android</string>
 
     <string name="percentage">%1$d%%</string>
 
