--- a/step01-initial/src/main/res/values/strings.xml
+++ b/step01-initial/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Livro_Android_Kotlin_PauloSalvatore</string>
+    <string name="app_name">DevMon: 01-initial</string>
 </resources>
