--- a/step04-data-binding/src/main/res/values/strings.xml
+++ b/step04-data-binding/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">DevMon: 03-creatures-list</string>
+    <string name="app_name">DevMon: 04-data-binding</string>
 </resources>
