--- a/step06-creatures-silhouette/src/main/res/values/strings.xml
+++ b/step06-creatures-silhouette/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DevMon: 05-add-creatures</string>
+    <string name="app_name">DevMon: 06-creatures-silhouette</string>
 
     <string name="creature_number"># %1$03d</string>
 
