--- a/project-complete/src/main/res/values/strings.xml
+++ b/project-complete/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DevMon: 11-api-backend</string>
+    <string name="app_name">DevMon App</string>
 
     <string name="creature_number"># %1$03d</string>
 
